# UCL-PHAS0100-SupaMegaExample1

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build.sh
include/: arithmetic.hpp  factors.hpp  fraction.hpp  supa.hpp
src/: CMakeLists.txt  arithmetic.cpp  factors.cpp  fraction.cpp  main.cpp  supa.cpp
test/: CMakeLists.txt  main.cpp  main.hpp  test1.cpp  test2.cpp  test3.cpp
